# rays

./: Cargo.toml
crates/rays_core/: Cargo.toml
crates/rays_core/src/: color.rs  lib.rs  material.rs  ray.rs
crates/rays_gui/: Cargo.toml
crates/rays_gui/src/: app.rs  lib.rs  main.rs
crates/rays_gui/src/app/: event_system.rs
rays_gui/: Cargo.toml
rays_gui/src/: app.rs  main.rs
