[package]
name = "rays_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
rayon = "1.5"
glam = "0.20"
fastrand = "1.0"
dyn-clone = "1.0"
derive_more = "0.99"
ringbuffer = "0.8"
