[package]
name = "rays_gui"
version = "0.1.0"
authors = ["Aevyrie Roessler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rays_gui_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.15.0"                                                 # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
rays_core = { path = "../rays_core" }
crossbeam-channel = "0.5"

[features]
default = []
persistence = [
    "eframe/persistence",
    "serde",
] # Enable if you want to persist app state on shutdown
